--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=NBA
 APP_ENV=local
 APP_KEY=base64:wsSY4Ysc02PhBuZX9RnJ2fPM0MOwCWB5cXnxZq5j4gA=
 APP_DEBUG=true
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=nba
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=insert_password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=6f8cf8cc792ace
+MAIL_PASSWORD=5433eaeddcd267
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=krajas@nba.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
